# pybind11-kicad

./: .gitignore  README.md  pyproject.toml
compat/: kikit-test-requirements.txt
docs/api/: board.md  compatibility-matrix.md  compatibility.md  index.md  pcbnew-compat.md  pcbnew.md  porting-notes.md  pybind11-kicad.md  quickstart.md
native/: CMakeLists.txt
native/cmake/: KiCadSource.cmake  Pybind11KiCadNativeTargets.cmake
native/include/pybind11_kicad/: board.hpp  errors.hpp  types.hpp
native/src/: bindings.cpp  board.cpp  headless_kiface.cpp
python/: pcbnew.py
python/pybind11_kicad/: __init__.py
python/pybind11_kicad/compat/: __init__.py  pcbnew.py  swig_constants.py
scripts/: build.sh  compare-kikakuka-boards.py  convert-kicad-deps.py  run-kikakuka-test.sh  run-kikit-tests.sh  run-pcbnewswig-tests.sh  run.sh  test-kicad-cli.sh  test-kicad.sh  update-kicad-deps.sh
tests/: test_clean_api.py  test_pcbnew_compat.py
tests/golden/: simple_board.kicad_pcb
tests/support/kikakuka_headless/: sitecustomize.py
tests/upstream/: README.md
