[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pybind11-kicad-native-10"
version = "0.1.0"
description = "pybind11 KiCad backend proof of concept"
readme = "README.md"
requires-python = ">=3.14,<3.15"
license = { text = "GPL-3.0-or-later" }

[tool.setuptools]
package-dir = { "" = "python" }
py-modules = ["pcbnew"]

[tool.setuptools.packages.find]
where = ["python"]

[tool.pytest.ini_options]
pythonpath = ["python"]
testpaths = ["tests"]
